[package]
name = "reasonable-core"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.1", features = ["chrono", "postgres", "uuid"] }
dotenv = "0.13.0"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
sodiumoxide = "0.2.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
base64 = "0.10.1"
bincode = "1.1.2"
